Implementação Crud Veiculos

--- a/GerenciadorCondominio/Views/Usuarios/InformacoesUsuario.cshtml
+++ b/GerenciadorCondominio/Views/Usuarios/InformacoesUsuario.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Informações do Usuario";
 }
 
-@*<partial name="_Confirmacoes" />*@
+<partial name="_Configuracoes" />
 
 <div class="card horizontal">
     <div class="card-image">
@@ -40,9 +40,36 @@
 </div>
 
 <div>
-    @*@await Component.InvokeAsync("Veiculos", Model.Id)*@
+    @await Component.InvokeAsync("Veiculos", Model.Id)
 </div>
 
 <div>
-    @*<partial name="_Excluir" />*@
+    <partial name="_ModalExcluir" />
 </div>
+
+@section Scripts{ 
+    <script>
+        function ConfirmarExclusao(id, nome) {
+            $('.modal').modal({
+                dismissble: true
+            });
+
+            $('.modal').modal('open');
+
+            $('.nome').text(nome);
+
+            $('.btn-excluir').on('click', function () {
+                $.ajax({
+                    method: "POST",
+                    url: "/Veiculos/Delete",
+                    data: {
+                        id: id
+                    },
+                    success: function (data) {
+                        location.reload(true);
+                    }
+                })
+            })
+        }
+    </script>
+}
