--- a/GerenciadorCondominio/Views/Shared/_Layout.cshtml
+++ b/GerenciadorCondominio/Views/Shared/_Layout.cshtml
@@ -41,14 +41,16 @@
         </footer>
     </div>
     <environment include="Development">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"></script>
+        <script src="~/js/InicializarTooltips.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
         @RenderSection("Scripts", required: false)
     </environment>
     <environment exclude="Development">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <script src="~/js/InicializarTooltips.min.js"></script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
         @RenderSection("Scripts", required: false)
     </environment>
