--- a/GerenciadorCondominio/Views/Shared/_Layout.cshtml
+++ b/GerenciadorCondominio/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li class="nav-item"><a class="nav-link" asp-controller="Usuarios" asp-action="InformacoesUsuario">Minhas Informações</a></li>
                     <li class="nav-item"><a class="nav-link" asp-controller="Eventos" asp-action="Index">Eventos</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="Servicos" asp-action="Index">Servicos</a></li>
                     <li class="nav-item"><partial name="_Logout" /></li>
                 </ul>
             </div>
