--- a/GerenciadorCondominio/Views/Shared/_Layout.cshtml
+++ b/GerenciadorCondominio/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li class="nav-item"><a class="nav-link" asp-controller="Usuarios" asp-action="InformacoesUsuario">Minhas Informações</a></li>
                     <li class="nav-item"><a class="nav-link" asp-controller="Eventos" asp-action="Index">Eventos</a></li>
                     <li class="nav-item"><a class="nav-link" asp-controller="Servicos" asp-action="Index">Servicos</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="Imovel" asp-action="Index">Imoveis</a></li>
                     <li class="nav-item"><partial name="_Logout" /></li>
                 </ul>
             </div>
