Implementação de Funções

--- a/GerenciadorCondominio/Views/Shared/_Layout.cshtml
+++ b/GerenciadorCondominio/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li class="nav-item"><a class="nav-link" asp-controller="Eventos" asp-action="Index">Eventos</a></li>
                     <li class="nav-item"><a class="nav-link" asp-controller="Servicos" asp-action="Index">Servicos</a></li>
                     <li class="nav-item"><a class="nav-link" asp-controller="Imovel" asp-action="Index">Imoveis</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="Funcoes" asp-action="Index">Funções</a></li>
                     <li class="nav-item"><partial name="_Logout" /></li>
                 </ul>
             </div>
